fix: sidebar align

--- a/src/scss/ui/meeti/_meeti.scss
+++ b/src/scss/ui/meeti/_meeti.scss
@@ -8,8 +8,6 @@
   }
 
   &__grid {
-    @include m.grid(1, 2rem);
-
     @include m.tablet {
       @include m.grid(3, 2rem);
     }
